se cambio la ruta de las fotos

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(img_fondo.jpg);
+    background-image: url(fotos/img_fondo.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
