--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body{
     background-image: url(fotos/img_fondo.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    margin-top: 0;
+    margin: unset;
 }
 
 .container{
@@ -11,15 +13,24 @@ body{
 
 .card_prod{
     width: 100%;
-    margin: 2px;
-    height: 72%;
-    margin-top: 100px;
-    margin-bottom: 100px;
     border-radius: 6px;
     overflow: hidden;
     background-color: aliceblue;
     cursor: default;
     transition: all 400ms ease;
+}
+
+#productosIndex{
+    padding-bottom: 50px;
+}
+
+.navbar-collapse{
+    padding-bottom: 20px;
+}
+
+.navbar{
+    display: block;
+    --bs-navbar-padding-y:0;
 }
 
 .Titulo_prod{
@@ -32,12 +43,12 @@ body{
 .card_prod:hover{
     transform: translateY(-3%);
 }
+
 .card_prod img{
     width: 100%;
     height: 210px;
 
 }
-
 
 .card_prod a{
     align-items: center;
@@ -62,15 +73,13 @@ body{
 
 .centrado-flexbox {
     display: flex;
-    align-items: center; /* Centrado vertical */
-    justify-content: center; /* Centrado horizontal */
+    align-items: center; 
+    justify-content: center; 
 }
 
 #cards_mas_pequennias{
     display: flex;
-    margin-left: 15%;
-    margin-right: 15%;
-    margin-bottom: 30px;
+    margin: 10%;
 }
 
 #img_cards{
@@ -82,19 +91,19 @@ body{
     flex: 1;
     overflow-y: scroll;
     scroll-snap-type: y mandatory;
-    height: 400px; /* Altura del contenedor */
-    width: 60%; /* Opcional: ocupa todo el ancho disponible */
+    height: 400px; 
+    width: 40%; 
 }
 
 .carousel-wrapper-producto {
     display: flex;
-    flex-direction: column; /* Establece la dirección de apilamiento en vertical */
+    flex-direction: column;
     scroll-snap-type: y mandatory;
 }
 
 .carousel-slide-producto {
     flex: 0 0 auto;
-    height: 100%; /* Opcional: ocupa toda la altura del contenedor */
+    height: 100%;
     scroll-snap-align: start;
 }
 
@@ -102,11 +111,14 @@ body{
     max-width: 100%;
     max-height: 100%;
 }
+.DivPadre{
+  justify-content: center;
 
+}
 /* CONTAINERS VISTA PRODUCTO*/
 .container-vista-producto{ 
-    margin-top:10%;
-    margin-bottom: 13%;
+    align-self: center;
+    
 }
 
 .container-v-prod {
@@ -121,18 +133,18 @@ body{
 
 /* CUADRO DE COLOR CON COSAS DENTRO */
 .cuadrado-vista-producto {
-    width: 800px; /* Ancho del cuadrado */
-    height: 400px; /* Altura del cuadrado */
-    background-color: #8a6e8d; /* Color de fondo del cuadrado */
-    color: #ffffff; /* Color del texto */
-    border-radius: 20px; /* Radio de los bordes, ajusta según sea necesario */
+    width: 950px;
+    height: 400px; 
+    background-color: #8a6e8d; 
+    color: #ffffff; 
+    border-radius: 20px; 
 }
 
 /* BOTONES */
 
 .botones-vista-producto {
-    position: absolute; /* Posiciona los botones de forma absoluta */
-    bottom: 10px; /* Ajusta la distancia desde la parte inferior del cuadro */
-    left: 60%; /* Centra los botones horizontalmente */
-    transform: translateX(20%); /* Corrige la posición para que estén centrados */
+    position: absolute; 
+    bottom: 10px; 
+    left: 60%; 
+    transform: translateX(20%);
 }
