--- a/style.css
+++ b/style.css
@@ -54,13 +54,8 @@ body{
     align-items: center;
 }
 
-.card-text{
-    margin: 10px;
-
-}
-
-.card-title{
-    text-align: center;
+.card-carrito{
+    margin: 20px;
 
 }
 
@@ -69,12 +64,6 @@ body{
     text-align: center;
     margin-bottom: 10%;
 
-}
-
-.centrado-flexbox {
-    display: flex;
-    align-items: center; 
-    justify-content: center; 
 }
 
 #cards_mas_pequennias{
@@ -127,6 +116,7 @@ body{
     
 }
 
+
 .container-v-prod {
     display: flex;
     align-content:flex-start;
@@ -145,7 +135,59 @@ body{
     color: #ffffff; 
     border-radius: 20px; 
 }
-
+.cuadrado-subtotal{
+    background-color: #b5a2f0; 
+    padding: 20px;
+    --bs-btn-color: #fff;
+    --bs-btn-bg: #b5a2f0;
+    --bs-btn-border-color: #b5a2f0;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #b5a2f0;
+    --bs-btn-hover-border-color: #b5a2f0;
+    --bs-btn-focus-shadow-rgb: 49,132,253;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #b5a2f0;
+    --bs-btn-active-border-color: #b5a2f0;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: #b5a2f0;
+    --bs-btn-disabled-border-color: #b5a2f0;
+}
+.cuadrado-checkout{
+    background-color: #5940a2; 
+    border-radius: 10px; 
+    padding: 10px;
+    --bs-btn-color: #fff;
+    --bs-btn-bg: #5940a2;
+    --bs-btn-border-color: #5940a2;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #5940a2;
+    --bs-btn-hover-border-color: #5940a2;
+    --bs-btn-focus-shadow-rgb: 49,132,253;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #5940a2;
+    --bs-btn-active-border-color: #5940a2;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: #5940a2;
+    --bs-btn-disabled-border-color: #5940a2;
+    
+}
+.navbar-expand-lg .navbar-collapse{
+padding-top: 10px;
+}
+#containerPadreCarrito{
+    min-width: 40%;
+    max-width: 60%;
+}
+#containerProductosCarrito{
+    width: 100%;
+    padding-top: 10px;
+}
+#cardFooter{
+    background-color:transparent;
+    border-top:transparent;
+}
 /* BOTONES */
 
 .botones-vista-producto {
