--- a/style.css
+++ b/style.css
@@ -196,3 +196,17 @@ padding-top: 10px;
     left: 60%; 
     transform: translateX(20%);
 }
+
+
+#map {
+    width: 90%;
+    max-width: 1200px;
+    height: 500px;
+    margin: 0 auto;
+   
+}
+
+#mapsec{
+    padding: 50px 0;
+    background-color: #dcdcdc; 
+}
