Arreglando imagenes y direcciones de url

--- a/tiendaweb/principal/Templates/index.html
+++ b/tiendaweb/principal/Templates/index.html
@@ -74,7 +74,7 @@
             <div id="cards_mas_pequennias">
               <div class="card h-100">
                 <div id="img_cards">
-                  <a href="vista_producto.html">
+                  <a href="{% url 'vista_productos' %}">
                     <img
                     src="{% static 'fotos/img_default_productos.jpg' %}"
                       class="card-img-top"
@@ -93,7 +93,7 @@
                 <div class="card-footer" style="text-align: center">
                   <p style="font-weight: bold">PRECIO: $212.990</p>
                   <hr />
-                  <a href="carrito.html">
+                  <a href="{% url 'carrito' %}">
                     <button
                       type="button"
                       class="btn btn-dark"
@@ -110,7 +110,7 @@
             <div id="cards_mas_pequennias">
               <div class="card h-100">
                 <div id="img_cards">
-                  <a href="vista_producto.html">
+                  <a href="{% url 'vista_productos' %}">
                     <img
                     src="{% static 'fotos/img_default_productos.jpg' %}"
                       class="card-img-top"
@@ -129,7 +129,7 @@
                 <div class="card-footer" style="text-align: center">
                   <p style="font-weight: bold">PRECIO: $212.990</p>
                   <hr />
-                  <a href="carrito.html">
+                  <a href="{% url 'carrito' %}">
                     <button
                       type="button"
                       class="btn btn-dark"
@@ -146,7 +146,7 @@
             <div id="cards_mas_pequennias">
               <div class="card h-100">
                 <div id="img_cards">
-                  <a href="vista_producto.html">
+                  <a href="{% url 'vista_productos' %}">
                     <img
                     src="{% static 'fotos/img_default_productos.jpg' %}"                      
                       class="card-img-top"
@@ -165,7 +165,7 @@
                 <div class="card-footer" style="text-align: center">
                   <p style="font-weight: bold">PRECIO: $212.990</p>
                   <hr />
-                  <a href="carrito.html">
+                  <a href="{% url 'carrito' %}">
                     <button
                       type="button"
                       class="btn btn-dark"
@@ -182,7 +182,7 @@
             <div id="cards_mas_pequennias">
               <div class="card h-100">
                 <div id="img_cards">
-                  <a href="vista_producto.html">
+                  <a href="{% url 'vista_productos' %}">
                     <img
                     src="{% static 'fotos/img_default_productos.jpg' %}"
                       class="card-img-top"
@@ -201,7 +201,7 @@
                 <div class="card-footer" style="text-align: center">
                   <p style="font-weight: bold">PRECIO: $212.990</p>
                   <hr />
-                  <a href="carrito.html">
+                  <a href="{% url 'carrito' %}">
                     <button
                       type="button"
                       class="btn btn-dark"
@@ -218,7 +218,7 @@
             <div id="cards_mas_pequennias">
               <div class="card h-100">
                 <div id="img_cards">
-                  <a href="vista_producto.html">
+                  <a href="{% url 'vista_productos' %}">
                     <img
                     src="{% static 'fotos/img_default_productos.jpg' %}"
                       class="card-img-top"
@@ -237,7 +237,7 @@
                 <div class="card-footer" style="text-align: center">
                   <p style="font-weight: bold">PRECIO: $212.990</p>
                   <hr />
-                  <a href="carrito.html">
+                  <a href="{% url 'carrito' %}">
                     <button
                       type="button"
                       class="btn btn-dark"
@@ -254,7 +254,7 @@
             <div id="cards_mas_pequennias">
               <div class="card h-100">
                 <div id="img_cards">
-                  <a href="vista_producto.html">
+                  <a href="{% url 'vista_productos' %}">
                     <img
                     src="{% static 'fotos/img_default_productos.jpg' %}"
                       class="card-img-top"
@@ -273,7 +273,7 @@
                 <div class="card-footer" style="text-align: center">
                   <p style="font-weight: bold">PRECIO: $212.990</p>
                   <hr />
-                  <a href="carrito.html">
+                  <a href="{% url 'carrito' %}">
                     <button
                       type="button"
                       class="btn btn-dark"
@@ -290,7 +290,7 @@
             <div id="cards_mas_pequennias">
               <div class="card h-100">
                 <div id="img_cards">
-                  <a href="vista_producto.html">
+                  <a href="{% url 'vista_productos' %}">
                     <img
                     src="{% static 'fotos/img_default_productos.jpg' %}"
                       class="card-img-top"
@@ -309,7 +309,7 @@
                 <div class="card-footer" style="text-align: center">
                   <p style="font-weight: bold">PRECIO: $212.990</p>
                   <hr />
-                  <a href="carrito.html">
+                  <a href="{% url 'carrito' %}">
                     <button
                       type="button"
                       class="btn btn-dark"
@@ -326,7 +326,7 @@
             <div id="cards_mas_pequennias">
               <div class="card h-100">
                 <div id="img_cards">
-                  <a href="vista_producto.html">
+                  <a href="{% url 'vista_productos' %}">
                     <img
                     src="{% static 'fotos/img_default_productos.jpg' %}"
                       class="card-img-top"
@@ -345,7 +345,7 @@
                 <div class="card-footer" style="text-align: center">
                   <p style="font-weight: bold">PRECIO: $212.990</p>
                   <hr />
-                  <a href="carrito.html">
+                  <a href="{% url 'carrito' %}">
                     <button
                       type="button"
                       class="btn btn-dark"
