--- a/tiendaweb/principal/Templates/carrito.html
+++ b/tiendaweb/principal/Templates/carrito.html
@@ -12,7 +12,7 @@
                   <hr>
                   <div class="row g-0">
                     <div class="col-md-4">
-                      <img src="{% static 'fotos/img_default_productos' %}" class="img-fluid rounded-start" alt="...">
+                      <img src="{% static 'fotos/img_default_productos.jpg' %}" class="img-fluid rounded-start" alt="...">
                     </div>
                     <div class="col-md-6">
                       <div class="card-body">
@@ -30,7 +30,7 @@
                   <hr>
                   <div class="row g-0">
                     <div class="col-md-4">
-                      <img src="{% static 'fotos/img_default_productos' %}" class="img-fluid rounded-start" alt="...">
+                      <img src="{% static 'fotos/img_default_productos.jpg' %}" class="img-fluid rounded-start" alt="...">
                     </div>
                     <div class="col-md-6">
                       <div class="card-body">
@@ -48,7 +48,7 @@
                   <hr>
                   <div class="row g-0">
                     <div class="col-md-4">
-                      <img src="{% static 'fotos/img_default_productos' %}" class="img-fluid rounded-start" alt="PC HP">
+                      <img src="{% static 'fotos/img_default_productos.jpg' %}" class="img-fluid rounded-start" alt="PC HP">
                     </div>
                     <div class="col-md-6">
                       <div class="card-body">
