--- a/tiendaweb/principal/Templates/login.html
+++ b/tiendaweb/principal/Templates/login.html
@@ -2,41 +2,42 @@
 {% load static %}
 {% block body %}
 
-<div class="container">
-    <div class="mb-3 row">
-        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-9 col-xxl-9">
-            <div class="card">
-                <div class="card-header">
-                    <h3 class="text-center"><b>Inicio de sesión</b></h3>
+<div class="DivPadre">
+  <div class="container" style="margin-top: 25px; max-width: 1000px;">
+    <div class="mb-3 row" style="width: auto;">
+      <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+        <div class="card">
+          <div class="card-header">
+            <h3 class="text-center"><b>Inicio de Sesión</b></h3>
+          </div>
+          <div class="card-body" style="margin-top: 15px;">
+            <form class="mb-3 row" id="formulario" method="POST">
+              {% csrf_token %}
+              <div class="row mb-3">
+                <div class="my-2">
+                    <label for="usuario" class="form-label">Usuario</label>
+                    <input type="text" class="form-control" id="usuario"  placeholder="Ingresa nombre de usuario" name="usuario">
+                    <span id="spanusuario"  style="color: red;" style="font-size: 14px ;" style="font-family: Arial, Helvetica, sans-serif;"></span> 
                 </div>
-                <form class="mb-3 row" id="formulario" method="POST">
-                    {% csrf_token %}
-                      <div class="row mb-3">
-                        <div class="my-2">
-                          <label for="Usuario" class="form-label">Usuario</label>
-                          <input type="text" class="form-control" id="usuario"  placeholder="Ingresa nombre de usuario" name="usuario">
-                        </div>
-                        <div class="my-2">
-                          <label for="password1" class="form-label">Contrase&ntilde;a</label>
-                          <input type="password" class="form-control" id="password1" placeholder="Ingresa Contraseña"  min="8" maxlength="25" name="password1">
-                          <span id="spancontra"  style="color: red;" style="font-size: 14px ;" style="font-family: Arial, Helvetica, sans-serif;"></span> 
-                        </div>
-                        <div class="text-end">
-                          <button  onclick="validar()"     type="submit" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#guardar">
-                            Guardar informacion
-                        </button>
-                        </div>
-                        {% if mensaje %}
-                            <p style="color: red;"> {{ mensaje }} </p>
-      
-                        {% endif %}
-                        
-                    </form>
-                  </div>
+                <div class="my-2">
+                  <label for="password1" class="form-label">Contrase&ntilde;a</label>
+                  <input type="password" class="form-control" id="password1" placeholder="Ingresa Contraseña"  min="8" maxlength="25" name="password1">
+                  <span id="spancontra"  style="color: red;" style="font-size: 14px ;" style="font-family: Arial, Helvetica, sans-serif;"></span> 
                 </div>
-            </div>
+                <div class="text-end">
+                  <button  onclick="validar()"     type="submit" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#guardar">
+                    Guardar informacion
+                  </button>
+                </div>
+              </div>
+              {% if mensaje %}
+                <p style="color: red;"> {{ mensaje }} </p>
+              {% endif %}
+            </form>
+          </div>
         </div>
+      </div>
     </div>
-
-
+  </div>
+</div>
 {% endblock  %}
