--- a/tiendaweb/principal/Templates/modificar.html
+++ b/tiendaweb/principal/Templates/modificar.html
@@ -1,9 +1,9 @@
 {% extends 'navbar.html' %}
 {% load static %}
 {% block body %}
-<div class="container" style=>
+<div class="container mt-4" style=>
     <div class="mb-3 row">
-        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-9 col-xxl-9">
+        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
             <div class="card">
                 <div class="card-header">
                     <h3 class="text-center"><b>Modificar Información</b></h3>
@@ -36,18 +36,8 @@
                           <input type="email" class="form-control" id="email1"  placeholder="Ingresa Correo" name="email1">
                           <span id="spancorreo"  style="color: red;" style="font-size: 14px ;" style="font-family: Arial, Helvetica, sans-serif;"></span> 
                         </div>
-                        <div class="my-2">
-                          <label for="password1" class="form-label">Ingrese contraseña actual</label>
-                          <input type="password" class="form-control" id="password1" placeholder="Actual contraseña"  min="8" maxlength="25" name="password1">
-                          <span id="spancontra"  style="color: red;" style="font-size: 14px ;" style="font-family: Arial, Helvetica, sans-serif;"></span> 
-                        </div>
-                        <div class="my-2">
-                            <label for="password2" class="form-label">Ingrese contraseña nueva</label>
-                            <input type="password" class="form-control" id="password2" placeholder="Nueva contraseña"  min="8" maxlength="25" name="password2">
-                            <span id="spancontras"  style="color: red;" style="font-size: 14px ;" style="font-family: Arial, Helvetica, sans-serif;"></span> 
-                          </div>
                         <div class="text-end">
-                          <button  onclick="validar()"     type="submit" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#guardar">
+                          <button  type="submit" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#guardar">
                             Guardar informacion
                         </button>
                         </div>
@@ -62,6 +52,5 @@
             </div>
         </div>
     </div>
-    <script src="{% static 'validacion.JS' %}"></script>
 
 {% endblock  %}
