--- a/tiendaweb/principal/Templates/navbar.html
+++ b/tiendaweb/principal/Templates/navbar.html
@@ -12,7 +12,7 @@
       href="https://getbootstrap.com/docs/5.3/assets/css/docs.css"
       rel="stylesheet"
     />
-    <title>Home</title>
+    <title>DUOTECK</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="{% static 'style.css '%}">
   </head>
