--- a/tiendaweb/principal/Templates/modificar.html
+++ b/tiendaweb/principal/Templates/modificar.html
@@ -13,12 +13,12 @@
                         {% csrf_token %}
                         <label for="nombre1" class="col-sm-2 col-md-2 col-lg-2 col-xl-2 col-xxl-2 col-form-label">Nombres</label>
                         <div class="col-sm-10 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-                            <input type="text" id="nombre1" class="form-control"  placeholder="Ingresa Nombres" name="nombre1">
+                            <input type="text" id="nombre1" class="form-control"  placeholder={{user.first_name}} name="nombre1">
                             <span id="spannombre"  style="color: red;" style="font-size: 14px ;" style="font-family: Arial, Helvetica, sans-serif;"></span> 
                         </div>
                         <label for="apellido1" class="col-sm-2 col-md-2 col-lg-2 col-xl-2 col-xxl-2 col-form-label">Apellidos</label>
                         <div class="col-sm-10 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-                            <input type="text" id="apellido1" class="form-control"  placeholder="Ingresa Apellidos" name="apellido1">
+                            <input type="text" id="apellido1" class="form-control"  placeholder={{user.last_name}}  name="apellido1">
                             <span id="spanapellido"  style="color: red;" style="font-size: 14px ;" style="font-family: Arial, Helvetica, sans-serif;"></span> 
                         </div>
                     <br>
@@ -28,12 +28,12 @@
                       <div class="row mb-3">
                         <div class="my-2">
                             <label for="usuario" class="form-label">Usuario</label>
-                            <input type="text" class="form-control" id="usuario"  placeholder="Ingresa nombre de usuario" name="usuario">
+                            <input type="text" class="form-control" id="usuario"  placeholder={{user.username}} name="usuario">
                             <span id="spanusuario"  style="color: red;" style="font-size: 14px ;" style="font-family: Arial, Helvetica, sans-serif;"></span> 
                         </div>
                         <div class="my-2">
                           <label for="email1" class="form-label">Email</label>
-                          <input type="email" class="form-control" id="email1"  placeholder="Ingresa Correo" name="email1">
+                          <input type="email" class="form-control" id="email1"  placeholder={{user.email}} name="email1">
                           <span id="spancorreo"  style="color: red;" style="font-size: 14px ;" style="font-family: Arial, Helvetica, sans-serif;"></span> 
                         </div>
                         <div class="text-end">
