--- a/tiendaweb/principal/Templates/navbar.html
+++ b/tiendaweb/principal/Templates/navbar.html
@@ -131,10 +131,17 @@
               </a>
               <ul class="dropdown-menu">
               {% if user.is_authenticated %}
-
+                {% if user.is_superuser%}
+                <li><a class="dropdown-item" href="{% url 'perfil' %}">Perfil</a></li>
+                <li><a class="dropdown-item" href="{% url 'salir' %}"> Cerrar sesión</a></li>
+                <li><a class="dropdown-item" href="{% url 'administrar' %}"> Administrar Productos</a></li>
+                <li><a class="dropdown-item" href="{% url 'agregar' %}"> Agregar Productos</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                {% else %}
                 <li><a class="dropdown-item" href="{% url 'perfil' %}">Perfil</a></li>
                 <li><a class="dropdown-item" href="{% url 'salir' %}"> Cerrar sesión</a></li>
                 <li><hr class="dropdown-divider" /></li>
+                {% endif %}
               {% else %}
                 <li><a class="dropdown-item" href="{% url 'registro' %}">Registro</a></li>
                 <li><a class="dropdown-item" href="{% url 'login' %}">Iniciar sesión</a></li>
