--- a/tiendaweb/principal/Templates/productos.html
+++ b/tiendaweb/principal/Templates/productos.html
@@ -5,43 +5,42 @@
     <div class="Titulo_prod"><h1 style="text-align: center">PRODUCTOS</h1></div>
     <div id="productosIndex" class="container">
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-md-4 g-3">
-        {% for producto in Productos %}
+        {% for producto in Productos%}
         <div class="col">
           <div id="cards_mas_pequennias">
             <div class="card h-100">
               <div id="img_cards">
                 <a href="{% url 'vista_productos' %}">
                   <img
-                    src="{% static 'fotos/img_default_productos.jpg' %}"
+                  src="{{producto.imagen.url}}"
                     class="card-img-top"
                     alt="producto"
                   />
                 </a>
               </div>
                 <div class="card-body">
-                  <h5 class="card-title">{{ producto.nombre }} </h5>
+                  <h5 class="card-title">{{ producto.nombre }}</h5>
                   <p class="card-text">
-                    {{producto.descripcion}}
+                    {{ producto.descripcion }}
                   </p>
                 </div>
                 <div class="card-footer" style="text-align: center">
-                  <p style="font-weight: bold">PRECIO: ${{producto.precio}}</p>
-                <hr />
-                <a href="{% url 'carrito' %}">
-                  <button
-                    type="button"
-                    class="btn btn-dark"
-                    style="margin-bottom: 5px"
-                  >
-                    AÑADIR AL CARRITO
-                  </button>
-                </a>
+                  <p style="font-weight: bold">PRECIO: ${{ producto.precio }}</p>
+                  <hr />
+                  <a href="{% url 'carrito' %}">
+                    <button
+                      type="button"
+                      class="btn btn-dark"
+                      style="margin-bottom: 5px"
+                    >
+                      AÑADIR AL CARRITO
+                    </button>
+                  </a>
                 </div>
-                <br>
             </div>
           </div>
-          {%endfor%}
         </div>
+        {%endfor%}
       </div>
     </div>
 
