--- a/tiendaweb/principal/Templates/productos_admin.html
+++ b/tiendaweb/principal/Templates/productos_admin.html
@@ -2,47 +2,76 @@
 {% load static %}
 {% block body %}
 
-<div class="Titulo_prod"><h1 style="text-align: center">PRODUCTOS</h1></div>
-<div id="productosIndex" class="container">
-  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-md-4 g-3">
-    {% for producto in Productos %}
-    <div class="col">
-      <div id="cards_mas_pequennias">
-        <div class="card h-100">
-          <div id="img_cards">
-            <a href="{% url 'vista_productos' %}">
-              <img
-                src="{% static 'fotos/img_default_productos.jpg' %}"
-                class="card-img-top"
-                alt="producto"
-              />
-            </a>
+    <div class="Titulo_prod"><h1 style="text-align: center"> ADMINISTRAR PRODUCTOS</h1></div>
+    <div id="productosIndex" class="container">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-md-4 g-3">
+        {% for producto in Productos%}
+        <div class="col">
+          <div id="cards_mas_pequennias">
+            <div class="card h-100">
+              <div id="img_cards">
+                <a href="{% url 'vista_productos' %}">
+                  <img
+                  src="{{producto.imagen.url}}"
+                    class="card-img-top"
+                    alt="producto"
+                  />
+                </a>
+              </div>
+                <div class="card-body">
+                  <h5 class="card-title">{{ producto.nombre }}</h5>
+                  <p class="card-text">
+                    {{ producto.descripcion }}
+                  </p>
+                </div>
+                <div class="card-footer" style="text-align: center">
+                  <p style="font-weight: bold">PRECIO: ${{ producto.precio }}</p>
+                  <hr />
+                  <a href="{% url 'modprod' producto.id_producto %}">
+                    <button
+                      type="button"
+                      class="btn btn-dark"
+                      style="margin-bottom: 5px"
+                    >
+                      MODIFICAR
+                    </button>
+                  </a>
+                  <a>
+                    <button
+                      type="button"
+                      class="btn btn-danger"
+                      data-bs-toggle="modal" data-bs-target="#borrar_prod"
+                      style="margin-bottom: 5px"
+                    >
+                      ELIMINAR
+                    </button>
+                  </a>
+                </div>
+            </div>
           </div>
-            <div class="card-body">
-              <h5 class="card-title">{{ producto.nombre }} </h5>
-              <p class="card-text">
-                {{producto.descripcion}}
-              </p>
-            </div>
-            <div class="card-footer" style="text-align: center">
-              <p style="font-weight: bold">PRECIO: ${{producto.precio}}</p>
-            <hr />
-            <a href="{% url 'modprod' producto.id_producto %}">
-              <button
-                type="button"
-                class="btn btn-dark"
-                style="margin-bottom: 5px"
-              >
-                MODIFICAR
-              </button>
-            </a>
-            </div>
-            <br>
         </div>
+        <div class="modal" tabindex="-1" id="borrar_prod">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title">¿Está seguro de que desea eliminar el producto?</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <p>Una vez borrado perdera toda la información</p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+              </a>
+              <a href="{% url  'eliminar_prod' producto.id_producto %}" >
+                <button type="button" class="btn btn-danger">Borrar</button>
+              </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        {%endfor%}
       </div>
-      {%endfor%}
     </div>
-  </div>
-</div>
 
-{% endblock  %}
+    {% endblock  %}
