--- a/tiendaweb/principal/Templates/index.html
+++ b/tiendaweb/principal/Templates/index.html
@@ -62,10 +62,10 @@
       </div>
       <div
         class="cuadrado-vista-producto h-100 w-100 mt-3"
-        style="text-align: center"
-      >{% if user.is_authenticated %}
+        style="text-align: center"> 
+        {% if user.is_authenticated %}
         <h1>PRODUCTOS DESTACADOS PARA : {{user.username}}</h1>
-        {% else%}
+        {% else %}
         <h1>PRODUCTOS DESTACADOS</h1>
         {% endif %}
 
@@ -77,7 +77,7 @@
             <div id="cards_mas_pequennias">
               <div class="card h-100">
                 <div id="img_cards">
-                  <a href="{% url 'vista_productos' %}">
+                  <a href="{% url 'prodvis' producto.id_producto %}">
                     <img
                     src="{{producto.imagen.url}}"
                     class="card-img-top"
@@ -87,7 +87,7 @@
                 </div>
                   <div class="card-body">
                     <h5 class="card-title">{{ producto.nombre }}</h5>
-                    <p class="card-text">
+                    <p class="card-text descripcion">
                       {{ producto.descripcion }}
                     </p>
                   </div>
