--- a/tiendaweb/principal/Templates/modificar_prod.html
+++ b/tiendaweb/principal/Templates/modificar_prod.html
@@ -13,7 +13,7 @@
                         {% csrf_token %}
                         <label for="nombre" class="col-sm-2 col-md-2 col-lg-2 col-xl-2 col-xxl-2 col-form-label">Nombre</label>
                         <div class="col-sm-10 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-                            <input type="text" id="nombre" class="form-control"  placeholder={{nombre}} name="nombre">
+                            <input type="text" id="nombre" class="form-control"  placeholder='Ingresa nombre' name="nombre">
                         </div>
                         <label for="categoria" class="col-sm-2 col-md-2 col-lg-2 col-xl-2 col-xxl-2 col-form-label">Categoria</label>
                         <div class="col-sm-10 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
@@ -26,7 +26,7 @@
                       <div class="row mb-3">
                         <div class="my-2">
                             <label for="precio" class="form-label">Precio</label>
-                            <input type="text" class="form-control" id="precio"  placeholder={{precio}} name="precio">
+                            <input type="text" class="form-control" id="precio"  placeholder='Ingresa precio' name="precio">
                         </div>
                         <div class="my-2">
                           <label for="descripcion" class="form-label">Descripción</label>
