--- a/tiendaweb/principal/Templates/perfil_usuario.html
+++ b/tiendaweb/principal/Templates/perfil_usuario.html
@@ -14,25 +14,25 @@
                 <div class="card">
                     <div class="card-header">
                         {% if user.is_authenticated %}
-                        <h3 class="text-center"><b>Bienvenido {{user.username}}</b></h3>
+                        <h3 class="text-center"><b>Bienvenido {{user.username}} </b></h3>
                         {% else %}
                         <h3 class="text-center"><b>Informaci&oacute;n del usuario</b></h3>
                         {% endif %}
                     </div>
                     <div class="card-body">
                         <form class="mb-3 row" id="formulario">
-                            <label for="nombre1" class="col-sm-2 col-md-2 col-lg-2 col-xl-2 col-xxl-2 col-form-label">Nombre</label>
+                            <label for="nombre1" class="col-sm-2 col-md-2 col-lg-2 col-xl-2 col-xxl-2 col-form-label">Nombre:</label>
                             <div class="col-sm-10 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
                                 {% if user.is_authenticated %}
-                                <h3 class="text-center"><b>{{user.first_name}}</b></h3>
+                                <div class="border border-black p-2 mb-2">{{user.first_name}}</div>
                                 {% else %}
                                 <h3 class="text-center"></h3>
                                 {% endif %}
                             </div>
-                            <label for="apellido1" class="col-sm-2 col-md-2 col-lg-2 col-xl-2 col-xxl-2 col-form-label">Apellidos</label>
+                            <label for="apellido1" class="col-sm-2 col-md-2 col-lg-2 col-xl-2 col-xxl-2 col-form-label">Apellidos:</label>
                             <div class="col-sm-10 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
                                 {% if user.is_authenticated %}
-                                <h3 class="text-center"><b>{{user.last_name}}</b></h3>
+                                <div class="border border-black p-2 mb-2" style="left: 30px;">{{user.last_name}}</div>
                                 {% else %}
                                 <h3 class="text-center"></h3>
                                 {% endif %}
@@ -43,23 +43,24 @@
                         <hr><br>
                           <div class="row mb-3">
                             <div class="my-2">
-                              <label for="email1" class="form-label">Email</label>
+                              <label for="email1" class="form-label">Email:</label>
                                 {% if user.is_authenticated %}
-                                <h3 class="text-center"><b>{{user.email}}</b></h3>
+                                <div class="border border-black p-2 mb-2">{{user.email}}</div>
                                 {% else %}
                                 <h3 class="text-center"></h3>
                                 {% endif %}
                             </div>
-                            <br>
+                            
+                            <div>
                             <a href="{% url 'modificar' user.username %}" > 
-                                <br>
-                                <button  type="button" class="btn btn-primary" data-bs-toggle="modal" style="margin-left: 40%;">
+                                <button  type="button" class="btn btn-primary" data-bs-toggle="modal" style="left: 100%;">
                                 Modificar informacion
                                 </button>
                            </a>
+                            </div>
                            <a> 
                             <br>
-                            <button  type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#borrar" style="margin-left: 40%;" style="color: red;">
+                            <button  type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#borrar" style="left: 100%;" style="color: red;">
                              Eliminar usuario
                             </button>
                             </a>
@@ -82,6 +83,7 @@
                                     </div>
                                   </div>
                                 </div>
+                                
                               </div>
 
 
@@ -91,52 +93,5 @@
                 </div>
             </div>
         </div>
-        <!--
-        <div class="row">
-            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
-                    <div class="card">
-                    <div class="card-header">
-                        <h3 class="text-center"><b>Informaci&oacute;n de despachos</b></h3>
-                    </div>
-                    <div class="card-body">
-                        <table class="table table-striped table-hover">
-                            <thead>
-                                <tr>
-                                    <th class="text-center">C&oacute;digo de Despacho</th>
-                                    <th class="text-center">Producto</th>
-                                    <th class="text-center">Precio</th>
-                                    <th class="text-center">Fecha de Compra</th>
-                                    <th class="text-center">Estado</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td class="text-center">1</td>
-                                    <td class="text-center">Monitos ASUS</td>
-                                    <td class="text-center">$250.000</td>
-                                    <td class="text-center">01-04-2024 14:23</td>
-                                    <td class="text-center"><a href="#">En preparaci&oacute;n</a></td>
-                                </tr>
-                                <tr>
-                                    <td class="text-center">2</td>
-                                    <td class="text-center">Memoria RAM 8Gb</td>
-                                    <td class="text-center">$30.000</td>
-                                    <td class="text-center">01-04-2024 14:23</td>
-                                    <td class="text-center"><a href="#">En camino</a></td>
-                                </tr>
-                                <tr>
-                                    <td class="text-center">3</td>
-                                    <td class="text-center">Placa Madre ASUS</td>
-                                    <td class="text-center">$100.000</td>
-                                    <td class="text-center">01-04-2024 14:23</td>
-                                    <td class="text-center"><a href="#">Enviado</a></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-        -->
     </div>
 {% endblock %}
