--- a/tiendaweb/principal/Templates/vista_producto.html
+++ b/tiendaweb/principal/Templates/vista_producto.html
@@ -12,56 +12,17 @@
                 <div class="carousel-container-producto">
                   <div class="carousel-wrapper-producto">
                     <div class="carousel-slide-producto">
-                      <img src="{% static 'fotos/img_carrousel-2.png' %}" alt="Slide 1" />
-                    </div>
-                    <div class="carousel-slide-producto">
-                      <img src="{% static 'fotos/img_default_productos.jpg' %}" alt="Slide 2" />
-                    </div>
-                    <div class="carousel-slide-producto">
-                      <img src="{% static 'fotos/img_carrousel.png' %}" alt="Slide 3" />
-                    </div>
-                    <div class="carousel-slide-producto">
-                      <img src="{% static 'fotos/img_default_productos.jpg' %}" alt="Slide 4" />
-                    </div>
-                    <div class="carousel-slide-producto">
-                      <img src="{% static 'fotos/img_carrousel-2.png' %}" alt="Slide 5" />
+                      <img   src="{{producto.imagen.url}}" alt="Slide 1" />
                     </div>
                   </div>
                 </div>
                 <div class="cuadrado-vista-producto overflow-auto">
                   <div class="text-container-vista-producto">
                     <!-- Texto -->
-                    <h1>Producto</h1>
+                    <h1>{{producto.nombre}}</h1>
                     <h5>Descripcion</h5>
                     <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Inventore quisquam excepturi ex voluptates cumque, tempore
-                      error asperiores laudantium, laborum at ea impedit facere
-                      minima eligendi ad similique vitae beatae enim quam. Ullam
-                      possimus hic quidem. Culpa, quia obcaecati! Deleniti,
-                      aspernatur eveniet illum laudantium iste eos, nemo tenetur
-                      ducimus numquam id nostrum commodi debitis! Nam,
-                      perspiciatis nobis maxime tempora dolorum tenetur minus,
-                      ducimus distinctio in ipsa illo vitae voluptas ipsum
-                      molestiae? Lorem ipsum dolor sit amet consectetur
-                      adipisicing elit. Inventore quisquam excepturi ex
-                      voluptates cumque, tempore error asperiores laudantium,
-                      laborum at ea impedit facere minima eligendi ad similique
-                      vitae beatae enim quam. Ullam possimus hic quidem. Culpa,
-                      quia obcaecati! Deleniti, aspernatur eveniet illum
-                      laudantium iste eos, nemo tenetur ducimus numquam id
-                      nostrum commodi debitis! Nam, perspiciatis nobis maxime
-                      tempora dolorum tenetur minus, ducimus distinctio in ipsa
-                      illo vitae voluptas ipsum molestiae? Lorem ipsum dolor sit
-                      amet consectetur adipisicing elit. Inventore quisquam
-                      excepturi ex voluptates cumque, tempore error asperiores
-                      laudantium, laborum at ea impedit facere minima eligendi
-                      ad similique vitae beatae enim quam. Ullam possimus hic
-                      quidem. Culpa, quia obcaecati! Deleniti, aspernatur
-                      eveniet illum laudantium iste eos, nemo tenetur ducimus
-                      numquam id nostrum commodi debitis! Nam, perspiciatis
-                      nobis maxime tempora dolorum tenetur minus, ducimus
-                      distinctio in ipsa illo vitae voluptas ipsum molestiae?
+                      {{producto.descripcion}}
                     </p>
                   </div>
                   <!-- Botones -->
@@ -76,30 +37,34 @@
                     class="col 12 cuadrado-vista-producto"
                     style="height: 20%; width: 100%"
                   >
-                    <p style="font-weight: bolder">PRECIO: $212.990</p>
+                    <p style="font-weight: bolder">PRECIO: ${{producto.precio}}</p>
                   </div>
-                  <div class="col-12">
-                    <a href="#">
-                      <button
-                        class="btn btn-primary"
-                        type="button"
-                        style="margin-bottom: 5px"
-                      >
-                        COMPRAR
-                      </button>
-                    </a>
-                  </div>
-                  <div class="col-12">
-                    <a href="{% url 'carrito' %}">
-                      <button
-                        type="button"
-                        class="btn btn-dark"
-                        style="margin-bottom: 5px"
-                      >
-                        AÑADIR AL CARRITO
-                      </button>
-                    </a>
-                  </div>
+                  {% if user.is_superuser %}
+                  
+                  {% else %}
+                    <div class="col-12">
+                      <a href="#">
+                        <button
+                          class="btn btn-primary"
+                          type="button"
+                          style="margin-bottom: 5px"
+                        >
+                          COMPRAR
+                        </button>
+                      </a>
+                    </div>
+                    <div class="col-12">
+                      <a href="{% url 'carrito' %}">
+                        <button
+                          type="button"
+                          class="btn btn-dark"
+                          style="margin-bottom: 5px"
+                        >
+                          AÑADIR AL CARRITO
+                        </button>
+                      </a>
+                    </div>
+                  {% endif %}
                 </div>
               </div>
             </div>
