--- a/tiendaweb/principal/static/style.css
+++ b/tiendaweb/principal/static/style.css
@@ -6,6 +6,34 @@ body{
     margin: unset;
 }
 
+#cards_mas_pequennias .card {
+    height: 100%; /* Permite que la card ocupe toda la altura del contenedor */
+    display: flex;
+    flex-direction: column;
+}
+
+#cards_mas_pequennias .descripcion {
+    flex-grow: 1;
+    overflow: hidden;
+    text-overflow: ellipsis; /* Muestra puntos suspensivos si el texto es demasiado largo */
+    white-space: nowrap; /* Evita el salto de línea */
+}
+
+#cards_mas_pequennias .card-footer {
+    flex-shrink: 0; /* El pie de página no se encogerá */
+    text-align: center;
+}
+
+#cards_mas_pequennias .card-title {
+    flex-shrink: 0; /* El título no se encogerá */
+    text-overflow: ellipsis; /* Muestra puntos suspensivos si el texto es demasiado largo */
+    white-space: nowrap;
+    flex-grow: 1;
+    overflow: hidden;
+
+
+}
+
 .container{
     width: 80%;
     max-width: 1100px ;
@@ -48,6 +76,11 @@ body{
     width: 100%;
     height: 210px;
 
+}
+
+#cards_mas_pequennias .card-img-top {
+    height: 150px; /* Ajusta la altura de la imagen */
+    object-fit: cover; /* Mantiene la proporción de la imagen */
 }
 
 .card_prod a{
